--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
   <li><a href="p4.html">P4</a></li>
   <li><a href="p5.html">P5</a></li>
   <li><a href="p7.html">P7</a></li>
+  <li><a href="p8.html">P8</a></li>
 
 
 </body>
