--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
   <li><a href="p5.html">P5</a></li>
   <li><a href="p7.html">P7</a></li>
   <li><a href="p8.html">P8</a></li>
+  <li><a href="p6.html">P6</a></li>
+
 
 
 </body>
