--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
   <li><a href="p7.html">P7</a></li>
   <li><a href="p8.html">P8</a></li>
   <li><a href="p6.html">P6</a></li>
-  <li><a href="p9.html">P9</a></li>
+  <li><a href="p.9.html">P9</a></li>
+  <li><a href="p.10.html">P10</a></li>
 
 
 
