--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <li><a href="p6.html">P6</a></li>
   <li><a href="p.9.html">P9</a></li>
   <li><a href="p.10.html">P10</a></li>
-
+  <li><a href="p12d.html">P12d</a></li>
 
 
 </body>
