--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
   <li><a href="p.9.html">P9</a></li>
   <li><a href="p.10.html">P10</a></li>
   <li><a href="p12d.html">P12d</a></li>
+  <li><a href="p13.html">P13</a></li>
+  
 
 
 </body>
