--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
   <li><a href="p.10.html">P10</a></li>
   <li><a href="p12d.html">P12d</a></li>
   <li><a href="p13.html">P13</a></li>
+  <li><a href="p12a.html">P12a</a></li>
   
 
 
